<resources>
    <string name="app_name">متحف الفن و التاريخ لمدينة تلمسان</string>
    <string name="title_activity_main">متحف الفن و التاريخ لمدينة تلمسان</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="textViewLienJournalOfficiel_1"><a href="http://mahtlemcen.org/images/journalofficiel/A2010016.pdf">الجريدة الرسمية العدد 16 لسنة 2010</a></string>
    <string name="textViewLienJournalOfficiel_2"><a href="http://mahtlemcen.org/images/journalofficiel/A2011056.pdf">الجريدة الرسمية العدد 56 لسنة 2011</a></string>
    <string name="textViewLienJournalOfficiel_3"><a href="http://mahtlemcen.org/images/journalofficiel/A2012026.pdf">الجريدة الرسمية العدد 26 لسنة 2012</a></string>
    <string name="textViewLienJournalOfficiel_4"><a href="http://mahtlemcen.org/images/journalofficiel/A2013004.pdf">الجريدة الرسمية العدد 04 لسنة 2013</a></string>
    <string name="textViewLienJournalOfficiel_5"><a href="http://mahtlemcen.org/images/journalofficiel/A2013022.pdf">الجريدة الرسمية العدد 22 لسنة 2013</a></string>
    <string name="textViewLienJournalOfficiel_6"><a href="http://mahtlemcen.org/images/journalofficiel/A2013051.pdf">الجريدة الرسمية العدد 51 لسنة 2013</a></string>
    <string name="textViewLienJournalOfficiel_7"><a href="http://mahtlemcen.org/images/journalofficiel/A2015012.pdf">الجريدة الرسمية العدد 12 لسنة 2015</a></string>

</resources>
