<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.wordpress.yassinemalti.museearthistoiretlemcen.JournalOfficielFragment">

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:id="@+id/RelativeLayout01"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/journalofficiel" />

                <TextView
                    android:id="@+id/textViewLienJournalOfficiel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:text="يمكنكم تحميل الجرائد الرسمية عبر الروابط المباشرة أدناه للإطلاع على مختلف النصوص الصادرة التي تخص تأسيس و تنظيم المتحف العمومي الوطني للفن و التاريخ"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="right"
                    android:layoutDirection="ltr"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp">

                    <TextView
                        android:id="@+id/textViewLienJournalOfficiel_1"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center_vertical"
                        android:linksClickable="true"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:text="@string/textViewLienJournalOfficiel_1"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/pdf_file_document" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="right"
                    android:layoutDirection="ltr"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp">

                    <TextView
                        android:id="@+id/textViewLienJournalOfficiel_2"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center_vertical"
                        android:linksClickable="true"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:text="@string/textViewLienJournalOfficiel_2"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/pdf_file_document" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="right"
                    android:layoutDirection="ltr"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp">

                    <TextView
                        android:id="@+id/textViewLienJournalOfficiel_3"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center_vertical"
                        android:linksClickable="true"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:text="@string/textViewLienJournalOfficiel_3"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/pdf_file_document" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="right"
                    android:layoutDirection="ltr"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp">

                    <TextView
                        android:id="@+id/textViewLienJournalOfficiel_4"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center_vertical"
                        android:linksClickable="true"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:text="@string/textViewLienJournalOfficiel_4"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/pdf_file_document" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="right"
                    android:layoutDirection="ltr"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp">

                    <TextView
                        android:id="@+id/textViewLienJournalOfficiel_5"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center_vertical"
                        android:linksClickable="true"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:text="@string/textViewLienJournalOfficiel_5"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/pdf_file_document" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="right"
                    android:layoutDirection="ltr"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp">

                    <TextView
                        android:id="@+id/textViewLienJournalOfficiel_6"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center_vertical"
                        android:linksClickable="true"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:text="@string/textViewLienJournalOfficiel_6"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/pdf_file_document" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="right"
                    android:layoutDirection="ltr"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp">

                <TextView
                        android:id="@+id/textViewLienJournalOfficiel_7"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center_vertical"
                        android:linksClickable="true"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:text="@string/textViewLienJournalOfficiel_7"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/pdf_file_document" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textViewLienJournalOfficiel_8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="70dp"
                    android:textSize="14sp" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom|center_horizontal">

        <com.google.android.gms.ads.NativeExpressAdView
            android:id="@+id/adBanner_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            ads:adUnitId="ca-app-pub-2326345806005611/8994803682"
            ads:adSize="280x70"/>
    </LinearLayout>

</FrameLayout>
